fix: alignment and colors

--- a/packages/demo/src/projectlist.css
+++ b/packages/demo/src/projectlist.css
@@ -143,16 +143,25 @@ footer a {
     border: solid 1px var(--lightest-gray);
     width: fit-content;
     margin: 0 auto;
+    width: 60%;
 }
+    .list{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        width: fit-content;
+        margin: 0 auto;
+        width: 90%;
+    }
     
 p{
     text-align: left;
-    width: 60%;
+    width: 80%;
 }
 
-.list {
-    display: flex;
-    justify-content: center;
-    padding-left: 10%;
-    padding-right: 10%;
+
+h1, h2, h3{
+    color: #4472C4;
 }
